--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 Django==4.1.3
 django-bootstrap4==22.3
+gunicorn==20.1.0
 idna==3.4
 requests==2.28.1
 soupsieve==2.3.2.post1
