--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==4.1.3
 django-bootstrap4==22.3
 gunicorn==20.1.0
 idna==3.4
+python-decouple==3.6
 requests==2.28.1
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
